--- a/main.html
+++ b/main.html
@@ -8,32 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="name">Name</label>
-	<input type="text" id="name" name="name" required><br>
-	<br>
-	<label for="gender">Gender</label>
-	<input type="radio" id="gender_m" name="gender" required>
-	<label for="gender">Male</label>
-	<input type="radio" id="gender_f" name="gender" required>
-	<label for="name">Female</label><br>
-	<br>
-	<label for="brand">Laptop Brands</label>
-	<select id="laptop" name="brand">
-		<option>Apple</option>
-		<option>Asus</option>
-		<option>HP</option>
-	</select>
-	<br><br>
-	<label for="age">Age</label>
-	<input type="number" id="age" name="age">
-	<br><br>
-	<label for="dob">DOB</label>
-	<input type="date" id="dob" name="dob">
-	<br><br>
-	<label for="password">Password</label>
-	<input type="password" id="password" name="password" required>
-	<br><br>
-	<button type="submit">Submit</button>
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" name="name" required><br>
+		<br>
+		
+		<label for="email">Email</label>
+		<input type="email" name="email" id="email" required>
+		<br><br>
+		
+		<label for="gender">Gender</label>
+		<input type="radio" id="gender_m" name="gender" required>
+		<label for="gender">Male</label>
+		<input type="radio" id="gender_f" name="gender" required>
+		<label for="name">Female</label><br>
+		<br>
+		
+		<label for="brand">Laptop Brands</label>
+		<select id="laptop" name="brand">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select>
+		<br><br>
+		
+		<label for="age">Age</label>
+		<input type="number" id="age" name="age" required>
+		<br><br>
+		
+		<label for="dob">DOB</label>
+		<input type="date" id="dob" name="dob" required>
+		<br><br>
+		
+		<label for="password">Password</label>
+		<input type="password" id="password" name="password" required>
+		<br><br>
+		
+		<button type="submit">Submit</button>
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
