--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		<label for="name">Female</label><br>
 		<br>
 		
-		<label for="brand">Laptop Brands</label>
+		<label for="laptop">Laptop Brands</label>
 		<select id="laptop" name="brand">
 			<option>Apple</option>
 			<option>Asus</option>
