--- a/main.html
+++ b/main.html
@@ -43,7 +43,10 @@
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" required>
 		<br><br>
-		
+
+		<label for="portfoli">Portfolio</label>
+		<input type="url" id="portfoli" name="portfolio">
+		<br><br>
 		<button type="submit">Submit</button>
 	</form>
 	
