--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 		<br><br>
 
 		<label for="portfoli">Portfolio</label>
-		<input type="url" id="portfoli" name="portfolio">
+		<input type="url" id="portfoli0" name="portfolio">
 		<br><br>
 		<button type="submit">Submit</button>
 	</form>
