--- a/main.html
+++ b/main.html
@@ -44,8 +44,8 @@
 		<input type="password" id="password" name="password" required>
 		<br><br>
 
-		<label for="portfoli">Portfolio</label>
-		<input type="url" id="portfoli0" name="portfolio">
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id="portfolio" name="portfolio">
 		<br><br>
 		<button type="submit">Submit</button>
 	</form>
